--- a/GuessNumber/Base.lproj/Main.storyboard
+++ b/GuessNumber/Base.lproj/Main.storyboard
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11129.15" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11103.10"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GuessNumber" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +18,83 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="drK-xf-t6I">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="猜數字小遊戲" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4CT-li-yLD">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="4Bp-xo-Euw"/>
+                                    <constraint firstAttribute="width" constant="142" id="q7e-q6-CB5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="請輸入4碼數字" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cIv-ny-DR7">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="125" id="QrK-70-NHk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gvu-IM-Y85">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="4ul-YS-G7c"/>
+                                </constraints>
+                                <state key="normal" title="我猜"/>
+                                <connections>
+                                    <action selector="GuessClick:" destination="BYZ-38-t0r" eventType="touchDown" id="E0j-CW-Dw9"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="97F-3k-sFA">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" red="0.060509184517914413" green="0.033976740609039408" blue="0.35718668193717273" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Uz-b4-6mE">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="8gc-zb-mKz"/>
+                                </constraints>
+                                <state key="normal" title="Replay"/>
+                                <connections>
+                                    <action selector="ReplayClick:" destination="BYZ-38-t0r" eventType="touchDown" id="tfI-yN-zOX"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Gvu-IM-Y85" firstAttribute="top" secondItem="3Uz-b4-6mE" secondAttribute="top" id="2gb-hC-2er"/>
+                            <constraint firstItem="drK-xf-t6I" firstAttribute="baseline" secondItem="Gvu-IM-Y85" secondAttribute="baseline" id="Hop-pn-CFB"/>
+                            <constraint firstItem="Gvu-IM-Y85" firstAttribute="leading" secondItem="drK-xf-t6I" secondAttribute="trailing" constant="45" id="QPW-bx-88X"/>
+                            <constraint firstItem="4CT-li-yLD" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="15" id="RyE-nz-cv7"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="3Uz-b4-6mE" secondAttribute="trailing" constant="26" id="S6U-KN-4ZB"/>
+                            <constraint firstItem="cIv-ny-DR7" firstAttribute="top" secondItem="4CT-li-yLD" secondAttribute="bottom" constant="19" id="TQw-JU-Bjn"/>
+                            <constraint firstItem="3Uz-b4-6mE" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="90" id="Wac-mH-923"/>
+                            <constraint firstItem="97F-3k-sFA" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="XMp-IW-bwi"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="97F-3k-sFA" secondAttribute="bottom" constant="137" id="Xxq-um-3Ab"/>
+                            <constraint firstItem="3Uz-b4-6mE" firstAttribute="leading" secondItem="Gvu-IM-Y85" secondAttribute="trailing" constant="19" id="Z5h-DU-Lac"/>
+                            <constraint firstItem="Gvu-IM-Y85" firstAttribute="top" secondItem="cIv-ny-DR7" secondAttribute="bottom" constant="14" id="hPs-e6-qCc"/>
+                            <constraint firstItem="4CT-li-yLD" firstAttribute="centerX" secondItem="cIv-ny-DR7" secondAttribute="centerX" id="jE2-Kz-857"/>
+                            <constraint firstItem="drK-xf-t6I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="lz4-SD-4Dl"/>
+                            <constraint firstItem="4CT-li-yLD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pup-WX-UGn"/>
+                            <constraint firstItem="97F-3k-sFA" firstAttribute="top" secondItem="drK-xf-t6I" secondAttribute="bottom" constant="24" id="tbk-Id-z31"/>
+                            <constraint firstItem="97F-3k-sFA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="7" id="xVV-nl-EpD"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="GuessButton" destination="Gvu-IM-Y85" id="xGP-i4-1bO"/>
+                        <outlet property="GuessNumber" destination="drK-xf-t6I" id="HT2-C2-e2v"/>
+                        <outlet property="Replay" destination="3Uz-b4-6mE" id="6An-Xf-5t3"/>
+                        <outlet property="ResultTextView" destination="97F-3k-sFA" id="pbL-rx-iKB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
