disable text view edit

--- a/GuessNumber/Base.lproj/Main.storyboard
+++ b/GuessNumber/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                                     <action selector="GuessClick:" destination="BYZ-38-t0r" eventType="touchDown" id="E0j-CW-Dw9"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="97F-3k-sFA">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="97F-3k-sFA">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="textColor" red="0.060509184517914413" green="0.033976740609039408" blue="0.35718668193717273" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
